project(timers)
add_executable(${PROJECT_NAME} timers/main.c timers/timers.c)
target_compile_definitions(${PROJECT_NAME} PRIVATE _GNU_SOURCE)
if (HAVE_CLOCK_GETTIME)
  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_CLOCK_GETTIME)
endif()
if (HAVE_TIMESPEC_GET)
  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_TIMESPEC_GET)
endif()
if (HAVE_GETTIMEOFDAY)
  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_GETTIMEOFDAY)
endif()
target_link_libraries(${PROJECT_NAME} PRIVATE anoheap)